fix scrollbar and change font

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 /* ---------------------- GENERAL BODY STUFF (a, h1, scrollbar, tooltip) ---------------------*/
 
-html,
-body {
+html, body {
     height: 100%;
     margin: 0 !important;
     padding: 0 !important;
@@ -10,7 +9,7 @@ body {
 body {
     -webkit-text-size-adjust: 100%;
     background-color: #f0f0f0;
-    font-family: 'Computer Modern Serif', serif;
+    font-family: 'Saira';
     color: #000000;
     font-size: 12pt;
     font-feature-settings: "onum" 1;
@@ -21,27 +20,30 @@ body {
     overflow-x: hidden;
 }
 
- ::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     width: .8em;
-}
+} */
 
- ::-webkit-scrollbar-track {
-    /* Track */
+/* Track */
+
+/* ::-webkit-scrollbar-track {
     background: lightgray;
     border: .35em solid #f0f0f0;
     border-radius: 10px;
-}
+} */
 
-::-webkit-scrollbar-thumb {
-    /* Handle */
+/* Handle */
+
+/* ::-webkit-scrollbar-thumb {
     background: #f0b1b1;
     border: .3em solid #f0f0f0;
-}
+} */
 
-::-webkit-scrollbar-thumb:hover {
-    /* Handle on hover */
+/* Handle on hover */
+
+/* ::-webkit-scrollbar-thumb:hover {
     background: #e05c5c;
-}
+} */
 
 @supports (font-variant-numeric: oldstyle-nums) {
     body {
@@ -70,9 +72,10 @@ a i:hover {
 h1 {
     width: fit-content;
     max-width: 80vw;
-    font-weight: bold;
-    font-variant: small-caps;
+    font-weight: 600;
+    /* font-variant: small-caps; */
     /* line-height: 110%; */
+    box-shadow: inset 0 -0.2em 0 #f0f0f0, inset 0 -0.75em 0 #b850507a;
     /* box-shadow: inset 0 -.1em 0 #f0f0f0, inset 0 -.7em 0 #b85050; */
     /* padding-left: .3em; */
     /* padding-right: .3em; */
@@ -115,7 +118,6 @@ h1 {
     position: relative;
 }
 
-
 /*---------------------------------------- BUTTON STUFF ---------------------------------------*/
 
 button {
@@ -146,7 +148,6 @@ button:hover {
     max-width: 18vw;
     font-size: large;
 }
-
 
 /*------------------------------------------ OVERLAY STUFF ----------------------------------------*/
 
@@ -203,7 +204,6 @@ button:hover {
     transition: background-color 1s ease-in-out, z-index .2s .2s !important;
 }
 
-
 /*------------------------------------------ CARD STUFF -----------------------------------------*/
 
 #card {
@@ -259,7 +259,6 @@ button:hover {
     font-size: 10.5px;
 }
 
-
 /* General Links Formatting  */
 
 .links {
@@ -303,7 +302,6 @@ button:hover {
     display: block;
     padding-top: 4px;
 }
-
 
 /*------------------- MEDIA BREAKPOINTS (FIXING FONT SIZES FOR PHONE SCREENS) -----------------*/
 
@@ -355,7 +353,6 @@ button:hover {
     }
 }
 
-
 /*--------------------------------------- MAIN CONTENT -----------------------------------*/
 
 #inspo {
@@ -382,6 +379,10 @@ button:hover {
 
 #content ul {
     margin-top: 0;
+}
+
+#content b {
+    font-weight: 500;
 }
 
 #content .lessmargin {
@@ -432,7 +433,6 @@ code {
     content: '';
 }
 
-
 /*---------------------------------- Header (title) and Footer ------------------------------*/
 
 #header {
@@ -441,8 +441,7 @@ code {
 
 #footer {
     margin-top: 4em;
-    margin-bottom: 5em;
-    padding-bottom: 1.5em;
+    padding-bottom: 4em;
     text-align: center;
     font-size: small;
     color: rgb(160, 160, 160);
